# semantica-codegraph

./: .cursorrules  .dockerignore  .env.cloud.example  .env.example  .env.local.example  .gitignore  .import-linter.toml  .importlinter  .pre-commit-config.yaml  ADVANCED_FEATURES_ROADMAP.md  BENCHMARK_ACCURATE_RESULTS.md  BENCHMARK_DUPLICATE_PARSING_ISSUE.md  BUGFIX_ID_GENERATION.md  CHANGELOG.md  CLAUDE.md  CRITICAL_ANALYSIS.md  Cargo.toml  DELETE_AGENT_MANUAL.md  DOCKER_QUICKSTART.md  DOCKER_SETUP.md  Dockerfile.agent  Dockerfile.api  FINAL_STATUS.md  FINAL_VALIDATION.md  GRAPH_OPTIMIZATION_ANALYSIS.md  GRAPH_OPTIMIZATION_PROPOSAL.md  IR_GENERATION_BOTTLENECK_ANALYSIS.md  IR_GENERATION_DETAILED_BREAKDOWN.md  IR_OPTIMIZATION_COMPLETE.md  IR_OPTIMIZATION_RESULTS.md  IR_OPTIMIZATION_SUMMARY.md  Justfile  LSP_INTEGRATION.md  MEASUREMENT_COMPARISON.md  PARAMETER_PROCESSING_OPTIMIZATION.md  PARSING_DEDUP_RESULTS.md  PRODUCTION_READY.md  QUICK_START.md  README.md  RETRIEVER_MEASUREMENT_COMPARISON.md  (+146 more)
.cargo/: clippy.toml  config.toml  rustfmt.toml
.claude/: config.json  test-config.json
.config/: nextest.toml
.cursor/: mcp.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
_backlog/: IR_COMPLETE_VERIFICATION.md  IR_CRITICAL_ISSUES.md  IR_CRITICAL_REVIEW_V2.md  IR_FINAL_STRATEGY.md  IR_FINAL_SUMMARY.md  IR_FINAL_VERIFICATION.md  IR_IMPLEMENTATION_COMPLETE.md  IR_IMPLEMENTATION_SUMMARY.md  IR_IMPROVED_PLAN.md  IR_SCIP_FEATURE_COMPARISON.md  IR_SOTA_FINAL_PLAN.md  IR_SOTA_PLAN.md  roadmap_adr.md
_command_doc/: 01_코드레포.md  IR.md  TEST_PYRAMID_REQUIREMENTS.md  그래프전략.md  인덱싱전략-1.md  인덱싱전략.md  전체레포및기능구조_fin.md  청킹전략.md
_docs/: IMPLEMENTATION_ROADMAP.md  README.md
_docs_legacy/: _00_table_of_contents.md
_final_handbook/: README.md  TEST_COVERAGE_REPORT.md  config-examples.md  config-system-guide.md
_roadmap/: ADR-001-V8-ROADMAP.md  ADR-002-V8-PACKAGE-STRUCTURE.md  Autonomous coding agent - hybrid architecture.md  CRITICAL_REVIEW_REAL_E2E.md  CRITICAL_REVIEW_V8.1.md  P5-TRAE-REFERENCE.md  PHASE1_COMPLETE.md  PHASE1_CRITICAL_REVIEW.md  PHASE1_CRITICAL_REVIEW_FINAL.md  PHASE1_REVISED_COMPLETE.md  PHASE1_SOTA_COMPLETE.md  REAL_E2E_VALIDATION.md  RFC-002-SCIP-PARITY-ROADMAP.md  RFC-009-VSCODE-EXTENSION-SOTA.md  SOTA_FIX_PYTEST_SUCCESS.md  SOTA_RESOLUTION_V8.1.md  TAINT_RULESET_ROADMAP.md  V8.1_FINAL_COMPLETION.md  V8.1_FINAL_COMPLETION_SOTA.md  V8.1_FINAL_SUMMARY.md
benchmark/: QUICKSTART.md  README.md  _BENCHMARK_IMPLEMENTATION_COMPLETE.md  __init__.py  agent_scenario_benchmark.py  comprehensive_retriever_benchmark.py  enhanced_mock_indexes.py  example_report.txt  fusion_version_comparison.py  indexing_benchmark.py  phase1_improvement_benchmark.py  profile_ir_detailed.py  profile_ir_generation.py  profile_ir_generation.stats  profiler.py  real_infrastructure_benchmark.py  real_retriever_benchmark.py  report_generator.py  retriever_benchmark.py  run_benchmark.py  run_benchmark_detailed.py  run_full_benchmark.sh  run_profiling_indexing.py  rust_engine_benchmark.py  simple_real_infrastructure_test.py  test_param_optimization.py
core/: config.py
docs/: ALL-RFCS-COMPLETED-2025-12-31.md  ARCHITECTURE_ENFORCEMENT.md  ARCHITECTURE_TOOLS_QUICKREF.md  BENCHMARKING.md  BENCHMARK_CONFIG_MIGRATION.md  BENCHMARK_GUIDE.md  BUILD_OPTIMIZATION_ADVANCED.md  BUILD_OPTIMIZATION_RESULTS.md  BUILD_OPTIMIZATION_RESULTS_FINAL.md  BUILD_QUICK_REFERENCE.md  CLEAN_ARCHITECTURE_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  ENVIRONMENT_SETUP.md  ESCAPE_ANALYSIS_INTEGRATION_DONE.md  FAST_BUILD_GUIDE.md  FEATURES_DEPENDENCY_MAP.md  FEATURE_ACTIVATION_GUIDE.md  FINAL-COMPLETION-REPORT-2025-12-31.md  HEAP_ANALYSIS_API.md  IFDS_IDE_FIX_SUMMARY.md  IMPLEMENTATION-COMPLETE-2025-12-31.md  INDEXING_STRATEGY.md  MASTER-COMPLETION-INDEX-2025-12-31.md  PROFILES.md  QUICKSTART.md  README.md  RFC-074-IMPLEMENTATION-STATUS-DONE.md  RFC-074-IMPLEMENTATION-STATUS.md  RFC-075-INTEGRATION-PLAN.md  RFC-BENCHMARK-SYSTEM.md  RFC-CONFIG-BENCHMARK-INTEGRATION.md  RFC-CONFIG-IMPLEMENTATION-STATUS.md  RFC-CONFIG-SYSTEM.md  RUST_DEVELOPMENT.md  RUST_ENGINE_API.md  RUST_ENV_SETUP.md  SESSION-SUMMARY-RFC-CONFIG-INTEGRATION.md  SESSION-SUMMARY-RFC-CONFIG-TESTING.md  TEST_COVERAGE_SUMMARY.md  TEST_OPTIMIZATION_REPORT.md  (+6 more)
examples/: agent_quick_start.py  benchmark_incremental_m2.py  benchmark_parallel_m2_3.py  demo_orchestrator.py  e2e_benchmark.py  kuzu_connection_example.py  lsp_api_example.py  m0_pyright_indexing_poc.py  m1_snapshot_persistence_example.py  name_resolution_example.py  overlay_usage_example.py  pyright_example.py  retriever_v3_example.py  retriever_v3_integration.py  run_retriever_benchmark.py  symbol_graph_benchmark.py  test_retriever_v3.py  v6_reasoning_examples.py
migrations/: 001_create_fuzzy_index.down.sql  001_create_fuzzy_index.up.sql  001_experience_store.sql  002_create_domain_index.down.sql  002_create_domain_index.up.sql  004_create_symbol_graph_tables.sql  005_create_pyright_snapshots.down.sql  005_create_pyright_snapshots.sql  005_create_pyright_snapshots.up.sql  006_add_chunk_indexes.down.sql  006_add_chunk_indexes.up.sql  MIGRATION_GUIDE.md  README.md  env.py  migrate.py  test_migrations.py
scripts/: GRANIAN_USAGE.txt  batch_generate_rules.sh  bench_deep_mode.py  bench_l1_l5_real.py  bench_with_query.py  benchmark_sota.py  check_rust_env.sh  compare_data_and_query.py  compare_python_rust.py  create_codegraph_ml.sh  create_pyo3_bindings.sh  debug_search.py  dump_graph.py  final_e2e_test.py  fix_rust_env.sh  generate_test.py  index_incremental.py  index_repo.py  index_test_repo.py  install_arch_tools.sh  install_rust_tools.sh  integrate_trcr.sh  integration_check.py  merge_cursor_settings.sh  real_e2e_pipeline.py  run_ir_pipeline.py  run_unified_benchmark.py  setup-fast-build.sh  setup_experience_db.py  setup_mcp_claude.sh  setup_mcp_cursor.sh  start_api_granian.sh  test_all_trcr_rules.py  test_fallback_rules.py  test_fast.sh  test_l14_comprehensive.py  test_l14_e2e_trcr.py  test_l14_trcr.py  test_l14_trcr_demo.py  test_minimal_api.py  (+14 more)
semantica_docs/: 01_FOUNDATION.md  03_GRAPH.md  (+11 more)
(+3178 files in other folders)
