[project]
name = "codegraph"
version = "0.1.0"
description = "LLM을 위한 코드 저장소 분석 및 지식 전달 시스템"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.7.0",
    "kuzu>=0.1.0",
    "openai>=1.0.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-language-pack>=0.11.0",
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "litellm>=1.0.0",
    "langgraph>=0.2.0",
    "gitpython>=3.1.0",
    "e2b-code-interpreter>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "rustworkx>=0.14.0",  # RFC-007: Rust graph engine for 10-50x speedup
    # 원격 빌드용 (CI/CD, Docker)
    "semantica-task-engine @ git+https://github.com/josongmin/semantica-task-engine.git@main#subdirectory=python-sdk",
    # 로컬 개발용: pip install -e /path/to/semantica-task-engine/python-sdk
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Allow function calls in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["F811", "F841", "B011", "B017", "E402", "F401", "B007"]  # Allow redefinitions and unused vars in tests
"benchmark/**/*.py" = ["E402", "B007"]  # Allow late imports and unused loop vars in benchmarks
"examples/**/*.py" = ["E402"]  # Allow late imports in examples
"scripts/**/*.py" = ["E402"]  # Allow late imports in scripts
"migrations/**/*.py" = ["E402"]  # Allow late imports in migrations
"server/**/*.py" = ["E402"]  # Allow late imports in server

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=30"
